2009-05-04 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix 
	* tagged as MuonTrackingGeometry-00-05-04

2009-04-27 Sarka Todorova <sarka.todorova@cern.ch>
	* memory leak fix 
	* tagged as MuonTrackingGeometry-00-05-03

2009-04-08 Sarka Todorova <sarka.todorova@cern.ch>
	* bugfix in CSC identification 
	* tagged as MuonTrackingGeometry-00-05-02

2009-04-06 Sarka Todorova <sarka.todorova@cern.ch>
	* unidentified RPC stations (partially) fixed (for GEO) 
	* tagged as MuonTrackingGeometry-00-05-01

2009-04-03 Andreas Salzburger <Andreas.Salzburger -at- cern.ch>
        * noField option introduced
        * memory defragmentation fixes (no dynamic allocation)
        * MuonTrackingGeometry-00-05-00

2009-04-02 Sarka Todorova <sarka.todorova@cern.ch>
	* CSC stations fixed (for GEO) 
	* tagged as MuonTrackingGeometry-00-04-26

2009-03-23 Sarka Todorova <sarka.todorova@cern.ch>
	* add switch for multilayer representation 
	* tagged as MuonTrackingGeometry-00-04-24/25

2009-03-19 Sarka Todorova <sarka.todorova@cern.ch>
	* add multilayer representation 
	* tagged as MuonTrackingGeometry-00-04-23

2009-02-16 Sarka Todorova <sarka.todorova@cern.ch>
	* fix return values (gcc43 warnings) 
	* tagged as MuonTrackingGeometry-00-04-22

2009-02-11 Sarka Todorova <sarka.todorova@cern.ch>
	* update hardcoded partitions 
	* tagged as MuonTrackingGeometry-00-04-21

2009-02-10 Sarka Todorova <sarka.todorova@cern.ch>
	* fix segm.fault (cloning of frame volumes) 
	* tagged as MuonTrackingGeometry-00-04-20

2009-02-09 Sarka Todorova <sarka.todorova@cern.ch>
	* update (BT,ECT,feet adjustment) 
	* tagged as MuonTrackingGeometry-00-04-19

2009-02-08 Sarka Todorova <sarka.todorova@cern.ch>
	* update 
	* tagged as MuonTrackingGeometry-00-04-18

2009-02-04 Sarka Todorova <sarka.todorova@cern.ch>
	* update steering
	* tagged as MuonTrackingGeometry-00-04-17

2009-02-03 Andreas Salzburger < Andreas.Salzburger -at- cern.ch >
        * switch to new TrkDetFlags