@@ -9,9 +9,9 @@ use GaudiInterface      GaudiInterface-*      External
 use AtlasCLHEP          AtlasCLHEP-*          External
 use StoreGate           StoreGate-*           Control
 
-use BFieldAth		  BFieldAth-*	              MagneticField 
+use BFieldAth		   BFieldAth-*	              MagneticField 
 
-use GeoModelKernel        GeoModelKernel-*            DetectorDescription/GeoModel 
+use GeoModelKernel         GeoModelKernel-*           DetectorDescription/GeoModel 
 use TrkDetDescrInterfaces  TrkDetDescrInterfaces-*    Tracking/TrkDetDescr
 use TrkDetDescrUtils       TrkDetDescrUtils-*         Tracking/TrkDetDescr
 use TrkGeometry            TrkGeometry-*              Tracking/TrkDetDescr
@@ -22,7 +22,7 @@ use TrkDetDescrGeoModelCnv TrkDetDescrGeoModelCnv-*   Tracking/TrkDetDescr
 use TrkMagFieldUtils       TrkMagFieldUtils-*         Tracking/TrkMagneticField      
 use TrkMagFieldInterfaces  TrkMagFieldInterfaces-*    Tracking/TrkMagneticField      
 
-use MuonGeoModel           MuonGeoModel-*             MuonSpectrometer
+use MuonReadoutGeometry    MuonReadoutGeometry-*      MuonSpectrometer/MuonDetDescr
 use MuonIdHelpers          MuonIdHelpers-*            MuonSpectrometer
 
 library MuonTrackingGeometry *.cxx components/*.cxx
