@@ -6,12 +6,12 @@
 #include "MuonTrackingGeometry/MuonStationBuilder.h"
 #include "MuonTrackingGeometry/MuonStationTypeBuilder.h"
 //MuonSpectrometer include
-#include "MuonGeoModel/MuonDetectorManager.h"
-#include "MuonGeoModel/MuonStation.h"
-#include "MuonGeoModel/MdtReadoutElement.h"
-#include "MuonGeoModel/RpcReadoutElement.h"
-#include "MuonGeoModel/CscReadoutElement.h"
-#include "MuonGeoModel/TgcReadoutElement.h"
+#include "MuonReadoutGeometry/MuonDetectorManager.h"
+#include "MuonReadoutGeometry/MuonStation.h"
+#include "MuonReadoutGeometry/MdtReadoutElement.h"
+#include "MuonReadoutGeometry/RpcReadoutElement.h"
+#include "MuonReadoutGeometry/CscReadoutElement.h"
+#include "MuonReadoutGeometry/TgcReadoutElement.h"
 #include "MuonIdHelpers/MdtIdHelper.h"
 #include "MuonIdHelpers/RpcIdHelper.h"
 // Trk
